--- a/Flask_Boggle_Exercise/templates/index.html
+++ b/Flask_Boggle_Exercise/templates/index.html
@@ -10,6 +10,7 @@
 
 <body>
     <!--So just to clarify on which element is best to use, a div class or a div id or even section id/class--id is used only once and is unique, class can be used multiple times and a section elements are appropiate are listed in the documents outline -->
+    <!--This Jinja template will display the board-->
     <div class="boggle">
         <table class="board">
             <tbody>
