--- a/Flask_Boggle_Exercise/templates/index.html
+++ b/Flask_Boggle_Exercise/templates/index.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Bootstrap CSS -->
+    <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous"> -->
     <title>Boggle Exercise</title>
 </head>
 
@@ -27,15 +29,27 @@
             High Score:
             <b>{{ score }}</b>
         </p>
+        <p>
+            Score:
+            <b class="score">0</b> Seconds Left:
+            <b class="timer"></b>
+        </p>
         <form method="POST" class="add-word">
             <input name="word" class="word" placeholder="Guess a word!">
-            <button>Enter</button>
+            <button>Submit</button>
         </form>
+        <p class="msg">
+            <!-- our JS will put messages here dynamically -->
+        </p>
+        <ul class="words">
+            <!-- our JS will words here as they score -->
+        </ul>
     </div>
     <script src="http://unpkg.com/jquery"></script>
     <!-- <script src="https://unpkg.com/axios/dist/axios.min.js"></script> -->
     <!-- From AJAX Handout-->
-    <script src="https://unpkg.com/axios/dist/axios.js"></script>
+    <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script> -->
+    <script src="https://unpkg.com/axios@0.19.0/dist/axios.js"></script>
     <script src="/static/boggle.js"></script>
     <script>
         let game = new BoggleGame("boggle", 60);
